Toolbars/floating_toolbars_on_hover.css
/**
 * Make #navigator-toolbox float over page content in maximized window and fullscreen modes
 * Original code provided by am803
 * https://www.reddit.com/r/FirefoxCSS/comments/bhbvhj/make_navigatortoolbox_appear_on_top_of_page/elrzrq3/
 */

/* Disable native toggler that triggers JS listener */
#fullscr-toggler {
  pointer-events: none;
}

/* Force bgcolor to prevent transparent tabbar */
#TabsToolbar {
  background-color: var(--lwt-accent-color) !important;
  -moz-window-dragging: no-drag !important;
}
  
:root:not([sizemode="normal"]):not([customizing]) #navigator-toolbox {
  margin-top: calc(-40px - var(--tab-min-height)) !important;
  transition: all .2s ease .2s !important;
  z-index: 1;
}

:root:not([sizemode="normal"]):not([customizing]) #navigator-toolbox::after {
  height: 2px;
  visibility: hidden !important;
  opacity: 0 !important;
}

:root[customizing] #navigator-toolbox,
:root:not([sizemode="normal"]):not([customizing]) #navigator-toolbox:focus-within,
:root:not([sizemode="normal"]):not([customizing]) #navigator-toolbox:hover,
:root:not([sizemode="normal"]):not([customizing]) #mainPopupSet:focus-within ~ #navigator-toolbox,
:root:not([sizemode="normal"]):not([customizing]) #mainPopupSet:hover ~ #navigator-toolbox {
  margin-top: 0 !important;
  transition-delay: 0s !important;
}

:root:not([sizemode="normal"]):not([customizing]) #navigator-toolbox:focus-within::after,
:root:not([sizemode="normal"]):not([customizing]) #navigator-toolbox:hover::after
/*:root:not([sizemode="normal"]):not([customizing]) #mainPopupSet:focus-within ~ #navigator-toolbox::after,
  :root:not([sizemode="normal"]):not([customizing]) #mainPopupSet:hover ~ #navigator-toolbox::after */ {
  height: 30px;
}

:root:not([sizemode="normal"]):not([customizing]) #content-deck {
  position: fixed;
  z-index: 0;
  top: 0;
  width: 100%;
  height: 100%;
}

/* Fix strange 8px shift while not in fullscreen mode */
:root:not([inFullscreen]) #content-deck {
  top: 8px;
}

:root:not([sizemode="normal"]):not([customizing]) #content-deck > #browser {
  width: 100%;
  height: 100%;
} 

/* Win8: To match non-fullscreen #titlebar-buttonbox-container */
@media (-moz-os-version: windows-win8) {
  #window-controls {
    margin-inline-start: 8px;
  }
}

